@@ -479,7 +479,7 @@ volatile_channel_priv_limit_checkout (const struct arguments *args,
   if (kv->value)
     free (kv->value);
 
-  if (!(kv->value = strdup (get_privilege_limit_string (get_val))))
+  if (!(kv->value = strdup (privilege_level_string (get_val))))
     {
       perror("strdup");
       exit(1);
@@ -495,7 +495,7 @@ volatile_channel_priv_limit_commit (const struct arguments *args,
 {
   uint8_t commit_val;
 
-  commit_val = get_privilege_limit_number (kv->value);
+  commit_val = privilege_level_number (kv->value);
   return lan_channel_volatile_access_set (args->dev,
 					  0, 0,
 					  0, 0,
@@ -523,7 +523,7 @@ volatile_channel_priv_limit_diff (const struct arguments *args,
   if (ret != 0)
     return -1;
 
-  passed_val = get_privilege_limit_number (kv->value);
+  passed_val = privilege_level_number (kv->value);
 
   if (passed_val == get_val)
     ret = 0;
@@ -532,7 +532,7 @@ volatile_channel_priv_limit_diff (const struct arguments *args,
       report_diff (sect->section,
                    kv->key,
                    kv->value,
-                   get_privilege_limit_string (get_val));
+                   privilege_level_string (get_val));
       ret = 1;
     }
 
@@ -544,7 +544,7 @@ volatile_channel_priv_limit_validate (const struct arguments *args,
 				      const struct section *sect,
 				      const char *value)
 {
-  int level = get_privilege_limit_number (value);
+  int level = privilege_level_number (value);
   return (level > 0) ? 0 : 1;
 }
 
@@ -1016,7 +1016,7 @@ non_volatile_channel_priv_limit_checkout (const struct arguments *args,
   if (kv->value)
     free (kv->value);
 
-  if (!(kv->value = strdup (get_privilege_limit_string (get_val))))
+  if (!(kv->value = strdup (privilege_level_string (get_val))))
     {
       perror("strdup");
       exit(1);
@@ -1032,7 +1032,7 @@ non_volatile_channel_priv_limit_commit (const struct arguments *args,
 {
   uint8_t commit_val;
 
-  commit_val = get_privilege_limit_number (kv->value);
+  commit_val = privilege_level_number (kv->value);
   return lan_channel_non_volatile_access_set (args->dev,
 					      0, 0,
 					      0, 0,
@@ -1060,7 +1060,7 @@ non_volatile_channel_priv_limit_diff (const struct arguments *args,
   if (ret != 0)
     return -1;
 
-  passed_val = get_privilege_limit_number (kv->value);
+  passed_val = privilege_level_number (kv->value);
   
   if (passed_val == get_val)
     ret = 0;
@@ -1069,7 +1069,7 @@ non_volatile_channel_priv_limit_diff (const struct arguments *args,
       report_diff (sect->section,
                    kv->key,
                    kv->value,
-                   get_privilege_limit_string (get_val));
+                   privilege_level_string (get_val));
       ret = 1;
     }
   
@@ -1081,7 +1081,7 @@ non_volatile_channel_priv_limit_validate (const struct arguments *args,
 					  const struct section *sect,
 					  const char *value)
 {
-  int level = get_privilege_limit_number (value);
+  int level = privilege_level_number (value);
   return (level > 0) ? 0 : 1;
 }
 
@@ -1141,7 +1141,7 @@ bmc_lan_channel_section_get (struct arguments *args)
 
   add_keyvalue (lan_channel_section,
 		"Volatile_Channel_Privilege_Limit",
-		"Possible values: Callback/User/Operator/Administrator/OEM_Proprietary/No_Access",
+		"Possible values: Callback/User/Operator/Administrator/OEM_Proprietary",
                 0,
 		volatile_channel_priv_limit_checkout,
 		volatile_channel_priv_limit_commit,
@@ -1186,7 +1186,7 @@ bmc_lan_channel_section_get (struct arguments *args)
 
   add_keyvalue (lan_channel_section,
 		"Non_Volatile_Channel_Privilege_Limit",
-		"Possible values: Callback/User/Operator/Administrator/OEM_Proprietary/No_Access",
+		"Possible values: Callback/User/Operator/Administrator/OEM_Proprietary",
                 0,
 		non_volatile_channel_priv_limit_checkout,
 		non_volatile_channel_priv_limit_commit,
